@@ -31,7 +31,7 @@
 #define LIBCSOUP_VERSION(x,y,z)	(((x)<<24)|((y)<<12)|(z))
 #define LIBCSOUP_VER_MAJOR	0		/* 0-255 */
 #define LIBCSOUP_VER_MINOR	7		/* 0-4095 */
-#define LIBCSOUP_VER_BUGFIX	5		/* 0-4095 */
+#define LIBCSOUP_VER_BUGFIX	6		/* 0-4095 */
 
 
 /*****************************************************************************
